--- a/data/ui/ui.glade
+++ b/data/ui/ui.glade
@@ -43,15 +43,15 @@ Author: Gabriele Musco
     <property name="lower">100</property>
     <property name="upper">10000</property>
     <property name="value">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step_increment">10</property>
+    <property name="page_increment">100</property>
   </object>
   <object class="GtkAdjustment" id="mouseDpi2Adjustment">
     <property name="lower">100</property>
     <property name="upper">10000</property>
     <property name="value">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step_increment">10</property>
+    <property name="page_increment">100</property>
   </object>
   <object class="GtkAdjustment" id="reactiveTimeAdjustment">
     <property name="lower">1</property>
@@ -128,7 +128,7 @@ Author: Gabriele Musco
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">start</property>
-                                <property name="label" translatable="yes">DPI 1</property>
+                                <property name="label" translatable="yes">DPI X</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
@@ -167,7 +167,7 @@ Author: Gabriele Musco
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
                                 <property name="halign">start</property>
-                                <property name="label" translatable="yes">DPI 2</property>
+                                <property name="label" translatable="yes">DPI Y</property>
                               </object>
                               <packing>
                                 <property name="expand">False</property>
