--- a/data/ui/ui.glade
+++ b/data/ui/ui.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.20.0 
+<!-- Generated with glade 3.20.2 
 
 Copyright (C) 
 
@@ -2019,6 +2019,7 @@ Terry Cain aka terrycain (razer_driver, original driver fork)
 And special thanks to all the folks that have supported and helped with the development. We are building the future of Linux, piece by piece, together.</property>
     <property name="logo_icon_name">org.gabmus.razercommander</property>
     <property name="license_type">gpl-3-0</property>
+    <signal name="close" handler="on_aboutdialog_close" swapped="no"/>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can_focus">False</property>
